Add contenet in the website

--- a/about.html
+++ b/about.html
@@ -350,9 +350,6 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="plotly.html">Plotly</a>
-</li>
-<li>
   <a href="dashbroad.html">Dashbroad</a>
 </li>
 <li>
@@ -381,7 +378,26 @@ div.tocify {
 </div>
 
 
-<p>aaa</p>
+<p><strong>EDUCATIONAL BACKGROUND</strong></p>
+<p>Southern Medical University (SMU) 2015.9~2019.6</p>
+<p>Columbia University in the city of New York 2019.9~2021.6</p>
+<p><strong>Degree and major</strong></p>
+<p>Bachelor of Science in Applied Statistics(Biological statistics)</p>
+<p>Master of Science in Biostatistics</p>
+<p><strong>Honors</strong></p>
+<p>Silver Award in National College Students Business Plan Competition in Guangdong</p>
+<p>Title of Merit student for three consecutive years, SMU</p>
+<p>Third-class Scholarships for two consecutive years, SMU</p>
+<p>Excellent League Member, SMU</p>
+<p><strong>PAPERS</strong></p>
+<p>Estimation of Sample Size and Its Implementation by nQuery Advanced and SAS Software(Compare Mean), Chinese Journal of Health Statistics,Wang Yan, Qian Ruoyuan,Chen Pingyan*</p>
+<p><strong>INTERNSHIP EXPERIENCE</strong></p>
+<p>Intern, Clinical Research Center (CRC),3rd Affiliated Hospital of Sun Yat-sen University 2018.7~2018.8</p>
+<p><strong>RESEARCH EXPERIENCE</strong></p>
+<p><code>Team Leader</code> &amp; <code>Financial Executive</code></p>
+<p>National College Students Business Plan Competition in Guangdong Province, Development and Marketing of EDC System 2017.10~2018.5</p>
+<p><code>Team Leader</code></p>
+<p>Clinical Trial Data Entry 2017.12</p>
 
 
 
