--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -350,9 +350,6 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="plotly.html">Plotly</a>
-</li>
-<li>
   <a href="dashbroad.html">Dashbroad</a>
 </li>
 <li>
@@ -383,10 +380,14 @@ div.tocify {
 
 <div id="introductory" class="section level1">
 <h1>Introductory</h1>
+<p>This website is a quick way to learn about me!</p>
+<p>It contains links about my e-mail and Github account, resume and the simple data analysis displayed by a dashbroad.</p>
+<p>It’s me!</p>
+<p><img src="me.JPG" /></p>
 </div>
 <div id="resume" class="section level1">
 <h1>Resume</h1>
-<p>Here’s my Resume <a href="about.html">Resume</a></p>
+<p>Here’s my <a href="about.html">resume</a></p>
 </div>
 
 
