Edited plots in dashbroad and added comment in landing page

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ div.tocify {
   <a href="dashbroad.html">Dashbroad</a>
 </li>
 <li>
-  <a href="mailto:&lt;qianry2019@163.com&gt;">
+  <a href="mailto:rq2166@cumc.columbia.edu">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -380,6 +380,7 @@ div.tocify {
 
 <div id="introductory" class="section level1">
 <h1>Introductory</h1>
+<p>Welcome!</p>
 <p>This website is a quick way to learn about me!</p>
 <p>It contains links about my e-mail and Github account, resume and the simple data analysis displayed by a dashbroad.</p>
 <p>It’s me!</p>
@@ -388,6 +389,11 @@ div.tocify {
 <div id="resume" class="section level1">
 <h1>Resume</h1>
 <p>Here’s my <a href="about.html">resume</a></p>
+</div>
+<div id="dashbroad" class="section level1">
+<h1><a href="dashbroad.html">Dashbroad</a></h1>
+<p>The data is about New York state weather stations from January 1, 1981 through December 31, 2010.</p>
+<p>Three plots are made to compare the snow and snow depth, the number of snowy days and temperature across time.</p>
 </div>
 
 
