Add comment about dashbroad

--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@ div.tocify {
 <p>Welcome!</p>
 <p>This website is a quick way to learn about me!</p>
 <p>It contains links about my e-mail and Github account, resume and the simple data analysis displayed by a dashbroad.</p>
+<p>I come from Canton, China. I got my Bachelor of Science in <em>Applied Statistics(Biological statistics)</em> in <em>Southern Medical University (SMU)</em>, and I am currently pursuing a master’s degree in <em>biostatistics</em> at <em>Columbia University in the city of New York</em>.</p>
 <p>It’s me!</p>
 <p><img src="me.JPG" /></p>
 </div>
@@ -392,8 +393,21 @@ div.tocify {
 </div>
 <div id="dashbroad" class="section level1">
 <h1><a href="dashbroad.html">Dashbroad</a></h1>
-<p>The data is about New York state weather stations from January 1, 1981 through December 31, 2010.</p>
-<p>Three plots are made to compare the snow and snow depth, the number of snowy days and temperature across time.</p>
+<p>The data is about weather in New York state, collected by New York state weather stations from January 1, 1981 through December 31, 2010.</p>
+<p>Three plots are made to compare the snowfall and snow depth, the number of snowy days and temperature across time.</p>
+<p><code>Chart A</code></p>
+<p>We can see that the snow depth decreases across the time given the similar snowfall.</p>
+<p><code>Chart B</code></p>
+<p>There is a broad trend that the numbers of snowy days are decreasing across time.</p>
+<p><code>Chart C</code></p>
+<p>The median of maximum temperature in a day is periodically fluctuated across time.</p>
+</div>
+<div id="contact-information" class="section level1">
+<h1>Contact Information</h1>
+<p>Ruoyuan Qian</p>
+<p>Columbia University in the city of New York</p>
+<p>Email: <a href="mailto:rq2166@cumc.columbia.edu" class="email">rq2166@cumc.columbia.edu</a></p>
+<p>Phone: 6468866173</p>
 </div>
 
 
